--- a/admin-pages/css/overview.css
+++ b/admin-pages/css/overview.css
@@ -467,4 +467,10 @@ body {
     dialog#details-dialog {
         max-width: 400px;
     }
+
+ .logo-text {
+    font-size: 1.25rem;
+    font-weight: 700;
+    color: #1a1a1a;
+}
 }
